<resources>
    <string name="app_name">LookUpGroceries</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="title_activity_search_screen">SearchScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="_25_off_upto_20_on_a_purchase_of_20_or_more">25 OFF(Upto $20) on a purchase of $20 or More.</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lookupgroceries">LookUpGroceries</string>
    <string name="password">Password</string>
    <string name="auth_failed_check_username_and_password">Auth Failed. Check Username and Password</string>
    <string name="email_address">Email Address</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_t1">t1</string>
    <string name="coupon">Coupon</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="signup">SIGNUP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_username">Create Username</string>
    <string name="create_password">Create Password</string>
    <string name="contact_number">Contact Number</string>
</resources>